HAWQ-800. Less tuple is inserted due to data locality information is not refreshed and dispatched in prepared statement.